# laguna

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: cameras.yaml  example_config.yaml
docs/: ARCHITECTURE.md  QUICKREF.md
examples/: dual_camera_timelapse.py  example_01_basic_init.py  example_02_experiment.py  example_03_subsystem_control.py
src/laguna/: __init__.py  config.py  core.py
src/laguna/camera/: __init__.py  dslr.py
src/laguna/data/: __init__.py
src/laguna/hydraulics/: __init__.py
src/laguna/robot/: __init__.py
src/laguna/storage/: __init__.py
tests/: test_config.py  test_core.py  test_robot.py
tests/camera/: test_dslr_config.py
